[package]
name = "rust-mqtt"
version = "0.1.0"
authors = ["Jack Kilrain <u6940136@anu.edu.au> <toastcraft.info@gmail.com>"]
edition = "2018"

[dependencies]
paho-mqtt = "0.9.1"

[[bin]]
name = "sub"
path = "src/subscriber/main.rs"

[[bin]]
name = "pub"
path = "src/publisher/main.rs"

[[bin]]
name = "analyser"
path = "src/analyser/main.rs"
