[package]
name = "rust-mqtt"
version = "0.1.0"
authors = ["Jack Kilrain <u6940136@anu.edu.au> <toastcraft.info@gmail.com>"]
edition = "2018"

[dependencies]
paho-mqtt = "0.9.1"
java-properties = "1.3.0"
ipnet = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5.0"
uuid = { version = "0.8.2", features = ["v4"] }
chrono ="0.4.19"
slog = "2.7.0"
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
regex = "1.4.3"
futures = "0.3.15"
async-std = "1.9.0"

[[bin]]
name = "pubcontroller"
path = "src/pubcontroller.rs"

[[bin]]
name = "analyser"
path = "src/analyser.rs"
